начинает размечать footer

--- a/source/index.html
+++ b/source/index.html
@@ -279,7 +279,8 @@
                         srcset="images/catalog/catalog-can-desktop-1@1x.png 1x, images/catalog/catalog-can-desktop-1@2x 2x">
                       <source media="(min-width: 768px)" width="130" height="188" type="image/png"
                         srcset="images/catalog/catalog-can-tablet-1@1x.png 1x, images/catalog/catalog-can-tablet-1@2x.png 2x">
-                      <img class="cards__link-image" src="images/catalog/catalog-can-mobile-1@1x.png" width="130" height="188" srcset="images/catalog/catalog-can-mobile-1@2x.png 2x"
+                      <img class="cards__link-image" src="images/catalog/catalog-can-mobile-1@1x.png" width="130"
+                        height="188" srcset="images/catalog/catalog-can-mobile-1@2x.png 2x"
                         alt="Кофе в белой алюминевой банке" loading="lazy">
                     </picture>
                   </a>
@@ -292,9 +293,9 @@
                   <div class="basic-products__order">
                     <span class="basic-products__price">225₽</span>
                     <a class="basic-products__button--block">
-                      <svg class="basic-products__icon" aria-hidden="true" focusable="false" width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path  fill-rule="evenodd"
-                          clip-rule="evenodd"
+                      <svg class="basic-products__icon" aria-hidden="true" focusable="false" width="20" height="16"
+                        viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
                           d="M13.6738 13.5219L13.6769 13.5H15.0238L14.9937 13.7105C14.8061 15.0242 13.6809 16 12.3539 16H3.64612C2.31905 16 1.19393 15.0242 1.00626 13.7105L0.190476 8L0 6.66667H1.34687H4.55556L4.33218 3.98618C4.15336 1.84036 5.84674 0 8 0C9.81376 0 11.3012 1.30578 11.6183 3H10.2473C9.95698 2.04197 9.06703 1.33333 8 1.33333C6.62679 1.33333 5.54687 2.50699 5.66091 3.87546L5.89351 6.66667H9.5V8H6.05787L6.28009 10.6667H9.71991L9.7338 10.5H11.0718L11.0579 10.6667H12.5V12H10.9468L10.7245 14.6667H12.3539C13.0174 14.6667 13.58 14.1788 13.6738 13.5219ZM4.71991 8H4.66667H1.53735L1.9183 10.6667H4.94213L4.71991 8ZM6.61342 14.6667L6.3912 12H9.6088L9.38658 14.6667H6.61342ZM5.05324 12L5.27547 14.6667H3.64612C2.98259 14.6667 2.42003 14.1788 2.32619 13.5219L2.10877 12H5.05324ZM15.8 10V7.2H13V5.8H15.8V3H17.2V5.8H20V7.2H17.2V10H15.8Z"
                           fill="white" />
                       </svg>
@@ -328,9 +329,9 @@
                   <div class="basic-products__order">
                     <span class="basic-products__price">225₽</span>
                     <a class="basic-products__button--block">
-                      <svg class="basic-products__icon" aria-hidden="true" focusable="false" width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path  fill-rule="evenodd"
-                          clip-rule="evenodd"
+                      <svg class="basic-products__icon" aria-hidden="true" focusable="false" width="20" height="16"
+                        viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
                           d="M13.6738 13.5219L13.6769 13.5H15.0238L14.9937 13.7105C14.8061 15.0242 13.6809 16 12.3539 16H3.64612C2.31905 16 1.19393 15.0242 1.00626 13.7105L0.190476 8L0 6.66667H1.34687H4.55556L4.33218 3.98618C4.15336 1.84036 5.84674 0 8 0C9.81376 0 11.3012 1.30578 11.6183 3H10.2473C9.95698 2.04197 9.06703 1.33333 8 1.33333C6.62679 1.33333 5.54687 2.50699 5.66091 3.87546L5.89351 6.66667H9.5V8H6.05787L6.28009 10.6667H9.71991L9.7338 10.5H11.0718L11.0579 10.6667H12.5V12H10.9468L10.7245 14.6667H12.3539C13.0174 14.6667 13.58 14.1788 13.6738 13.5219ZM4.71991 8H4.66667H1.53735L1.9183 10.6667H4.94213L4.71991 8ZM6.61342 14.6667L6.3912 12H9.6088L9.38658 14.6667H6.61342ZM5.05324 12L5.27547 14.6667H3.64612C2.98259 14.6667 2.42003 14.1788 2.32619 13.5219L2.10877 12H5.05324ZM15.8 10V7.2H13V5.8H15.8V3H17.2V5.8H20V7.2H17.2V10H15.8Z"
                           fill="white" />
                       </svg>
@@ -364,9 +365,9 @@
                   <div class="basic-products__order">
                     <span class="basic-products__price">225₽</span>
                     <a class="basic-products__button--block">
-                      <svg class="basic-products__icon" aria-hidden="true" focusable="false" width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path  fill-rule="evenodd"
-                          clip-rule="evenodd"
+                      <svg class="basic-products__icon" aria-hidden="true" focusable="false" width="20" height="16"
+                        viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
                           d="M13.6738 13.5219L13.6769 13.5H15.0238L14.9937 13.7105C14.8061 15.0242 13.6809 16 12.3539 16H3.64612C2.31905 16 1.19393 15.0242 1.00626 13.7105L0.190476 8L0 6.66667H1.34687H4.55556L4.33218 3.98618C4.15336 1.84036 5.84674 0 8 0C9.81376 0 11.3012 1.30578 11.6183 3H10.2473C9.95698 2.04197 9.06703 1.33333 8 1.33333C6.62679 1.33333 5.54687 2.50699 5.66091 3.87546L5.89351 6.66667H9.5V8H6.05787L6.28009 10.6667H9.71991L9.7338 10.5H11.0718L11.0579 10.6667H12.5V12H10.9468L10.7245 14.6667H12.3539C13.0174 14.6667 13.58 14.1788 13.6738 13.5219ZM4.71991 8H4.66667H1.53735L1.9183 10.6667H4.94213L4.71991 8ZM6.61342 14.6667L6.3912 12H9.6088L9.38658 14.6667H6.61342ZM5.05324 12L5.27547 14.6667H3.64612C2.98259 14.6667 2.42003 14.1788 2.32619 13.5219L2.10877 12H5.05324ZM15.8 10V7.2H13V5.8H15.8V3H17.2V5.8H20V7.2H17.2V10H15.8Z"
                           fill="white" />
                       </svg>
@@ -400,9 +401,9 @@
                   <div class="basic-products__order">
                     <span class="basic-products__price">225₽</span>
                     <a class="basic-products__button--block">
-                      <svg class="basic-products__icon" aria-hidden="true" focusable="false" width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path  fill-rule="evenodd"
-                          clip-rule="evenodd"
+                      <svg class="basic-products__icon" aria-hidden="true" focusable="false" width="20" height="16"
+                        viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
                           d="M13.6738 13.5219L13.6769 13.5H15.0238L14.9937 13.7105C14.8061 15.0242 13.6809 16 12.3539 16H3.64612C2.31905 16 1.19393 15.0242 1.00626 13.7105L0.190476 8L0 6.66667H1.34687H4.55556L4.33218 3.98618C4.15336 1.84036 5.84674 0 8 0C9.81376 0 11.3012 1.30578 11.6183 3H10.2473C9.95698 2.04197 9.06703 1.33333 8 1.33333C6.62679 1.33333 5.54687 2.50699 5.66091 3.87546L5.89351 6.66667H9.5V8H6.05787L6.28009 10.6667H9.71991L9.7338 10.5H11.0718L11.0579 10.6667H12.5V12H10.9468L10.7245 14.6667H12.3539C13.0174 14.6667 13.58 14.1788 13.6738 13.5219ZM4.71991 8H4.66667H1.53735L1.9183 10.6667H4.94213L4.71991 8ZM6.61342 14.6667L6.3912 12H9.6088L9.38658 14.6667H6.61342ZM5.05324 12L5.27547 14.6667H3.64612C2.98259 14.6667 2.42003 14.1788 2.32619 13.5219L2.10877 12H5.05324ZM15.8 10V7.2H13V5.8H15.8V3H17.2V5.8H20V7.2H17.2V10H15.8Z"
                           fill="white" />
                       </svg>
@@ -436,9 +437,9 @@
                   <div class="basic-products__order">
                     <span class="basic-products__price">225₽</span>
                     <a class="basic-products__button--block">
-                      <svg class="basic-products__icon" aria-hidden="true" focusable="false" width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path  fill-rule="evenodd"
-                          clip-rule="evenodd"
+                      <svg class="basic-products__icon" aria-hidden="true" focusable="false" width="20" height="16"
+                        viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
                           d="M13.6738 13.5219L13.6769 13.5H15.0238L14.9937 13.7105C14.8061 15.0242 13.6809 16 12.3539 16H3.64612C2.31905 16 1.19393 15.0242 1.00626 13.7105L0.190476 8L0 6.66667H1.34687H4.55556L4.33218 3.98618C4.15336 1.84036 5.84674 0 8 0C9.81376 0 11.3012 1.30578 11.6183 3H10.2473C9.95698 2.04197 9.06703 1.33333 8 1.33333C6.62679 1.33333 5.54687 2.50699 5.66091 3.87546L5.89351 6.66667H9.5V8H6.05787L6.28009 10.6667H9.71991L9.7338 10.5H11.0718L11.0579 10.6667H12.5V12H10.9468L10.7245 14.6667H12.3539C13.0174 14.6667 13.58 14.1788 13.6738 13.5219ZM4.71991 8H4.66667H1.53735L1.9183 10.6667H4.94213L4.71991 8ZM6.61342 14.6667L6.3912 12H9.6088L9.38658 14.6667H6.61342ZM5.05324 12L5.27547 14.6667H3.64612C2.98259 14.6667 2.42003 14.1788 2.32619 13.5219L2.10877 12H5.05324ZM15.8 10V7.2H13V5.8H15.8V3H17.2V5.8H20V7.2H17.2V10H15.8Z"
                           fill="white" />
                       </svg>
@@ -472,9 +473,9 @@
                   <div class="basic-products__order" href="#">
                     <span class="basic-products__price">225₽</span>
                     <a class="basic-products__button--block">
-                      <svg class="basic-products__icon" aria-hidden="true" focusable="false" width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path  fill-rule="evenodd"
-                          clip-rule="evenodd"
+                      <svg class="basic-products__icon" aria-hidden="true" focusable="false" width="20" height="16"
+                        viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
                           d="M13.6738 13.5219L13.6769 13.5H15.0238L14.9937 13.7105C14.8061 15.0242 13.6809 16 12.3539 16H3.64612C2.31905 16 1.19393 15.0242 1.00626 13.7105L0.190476 8L0 6.66667H1.34687H4.55556L4.33218 3.98618C4.15336 1.84036 5.84674 0 8 0C9.81376 0 11.3012 1.30578 11.6183 3H10.2473C9.95698 2.04197 9.06703 1.33333 8 1.33333C6.62679 1.33333 5.54687 2.50699 5.66091 3.87546L5.89351 6.66667H9.5V8H6.05787L6.28009 10.6667H9.71991L9.7338 10.5H11.0718L11.0579 10.6667H12.5V12H10.9468L10.7245 14.6667H12.3539C13.0174 14.6667 13.58 14.1788 13.6738 13.5219ZM4.71991 8H4.66667H1.53735L1.9183 10.6667H4.94213L4.71991 8ZM6.61342 14.6667L6.3912 12H9.6088L9.38658 14.6667H6.61342ZM5.05324 12L5.27547 14.6667H3.64612C2.98259 14.6667 2.42003 14.1788 2.32619 13.5219L2.10877 12H5.05324ZM15.8 10V7.2H13V5.8H15.8V3H17.2V5.8H20V7.2H17.2V10H15.8Z"
                           fill="white" />
                       </svg>
@@ -491,6 +492,85 @@
       </div>
     </section>
 
+    <section class="contacts ">
+      <div class="contacts__picture-wrapper container">
+        <h2 class="visually-hidden">Расположение магазина на карте</h2>
+        <picture>
+          <!-- <source type="image/webp" media="(min-width: 1440px)" srcset="images/map-desktop@1x.webp 1x, images/map-desktop@2x.webp 2x" width="1440" height="400">
+            <source type="image/webp" media="(min-width: 768px)" srcset="images/map-tablet@1x.webp 1x, images/map-tablet@2x.webp 2x" width="768" height="400">
+            <source type="image/webp" srcset="images/map-mobile@1x.webp 1x, images/map-mobile@2x.webp 2x" width="320" height="362"> -->
+          <source type="image/jpeg" media="(min-width: 1440px)"
+            srcset="images/map/map-desktop@1x.jpg 1x, images/map/map-desktop@2x.jpg 2x" width="1440" height="540">
+          <source type="image/jpeg" media="(min-width: 768px)"
+            srcset="images/map/map-tablet@1x.jpg 1x, images/map/map-tablet@2x.jpg 2x" width="768" height="400">
+          <img class="contacts__map-image" src="images/map/map-mobile@1x.jpg" srcset="images/map/map-mobile@2x.jpg 2x"
+            alt="Расположение магазина на карте" width="320" height="420" loading="lazy">
+        </picture>
+      </div>
+    </section>
+
   </main>
+
+  <footer class="main-footer" data-test="footer">
+    <div class="main-footer__wrapper container">
+      <div class=".main-footer-social__wrapper social">
+        <a class="main-footer__link" href="index.html">
+          <span class="visually-hidden">Логотип Drink2Go</span>
+          <svg class="main-footer__link-logo" width="128" height="24" fill="none">
+            <use href="icons/stack.svg#logo-text"></use>
+          </svg>
+        </a>
+        <ul class="main-footer__social ">
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Мы в Вконтакте</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">Мы в Ютубе</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Мы в Телеграме</span>
+            </a>
+          </li>
+        </ul>
+        <a class="main-footer__developer-link" href="https://htmlacademy.ru/intensive/adaptive">
+          <span class="main-footer__developer-text">HTML Academy</span>
+          <span class="visually-hidden">Логотип Кэт энерджи</span>
+          <svg class="main-footer__developer-logo" width="27" height="34" fill="none">
+            <use href="icons/stack.svg#icon-html-academy"></use>
+          </svg>
+        </a>
+      </div>
+      <div class=".main-footer-shop__wrapper">
+        <h3 class=".main-footer__title">Интернет-магазин</h3>
+        <ul class=".main-footer-shop__list">
+          <li class=".main-footer-shop__item">Каталог</li>
+          <li class=".main-footer-shop__item">Доставка</li>
+          <li class=".main-footer-shop__item">Способы оплаты</li>
+          <li class=".main-footer-shop__item">О нас</li>
+        </ul>
+      </div>
+      <div class=".main-footer-media__wrapper">
+        <h3 class=".main-footer__title">Медиа</h3>
+        <ul class=".main-footer-media__list">
+          <li class=".main-footer-media__item">Блог</li>
+          <li class=".main-footer-media__item">Информация для СМИ</li>
+          <li class=".main-footer-media__item">Правовая информация</li>
+        </ul>
+      </div>
+      <div class=".main-footer-contacts__wrapper">
+        <h3 class=".main-footer__title">Контакты</h3>
+        <div class=".main-footer-contacts__list">
+          <address class=".main-footer-contacts__adress">Санкт-Петербург, набережная реки Карповки, дом 5</address>
+          <a href="tel:+79999999999" class=".main-footer-contacts__phone">+7 (999) 999-99-99</a>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
+
 </html>
