--- a/source/index.html
+++ b/source/index.html
@@ -184,18 +184,17 @@
     </section>
 
     <section class="features">
-      <div class="features__wrapper container">
+      <div class="container">
         <span class="features__promo">Преимущества</span>
         <h2 class="features__title">Главные причины выбрать Drink2Go</h2>
         <ul class="features__list">
           <li class="features__item features__speed">
             <h3 class="features__name">Скорость</h3>
-            <p class="features__description">Готовый напиток всегда под рукой — просто открой банку</p>
+            <p class="features__description">Готовый напиток всегда под рукой&nbsp;&mdash; просто открой банку</p>
           </li>
           <li class="features__item features__fit">
             <h3 class="features__name">Удобство</h3>
-            <p class="features__description">Легко помещается и в карман,
-              и в маленькую сумочку</p>
+            <p class="features__description">Легко помещается и&nbsp;в&nbsp;карман,             и&nbsp;в&nbsp;маленькую сумочку</p>
           </li>
           <li class="features__item features__energy">
             <h3 class="features__name">Бодрость</h3>
@@ -204,8 +203,7 @@
           </li>
           <li class="features__item features__eco">
             <h3 class="features__name">Экологичность</h3>
-            <p class="features__description">Вся упаковка сделана
-              из перерабатываемых материалов</p>
+            <p class="features__description">Вся упаковка сделана из&nbsp;перерабатываемых материалов</p>
           </li>
         </ul>
       </div>
